@@ -6,6 +6,9 @@
  * Make default file mask consistent
    with Git. (Dan Villiom Podlaski Christiansen, #884)
 
+ * Add ``dulwich.porcelain._reset_file``.
+   (Ded_Secer)
+
 0.20.24	2021-07-18
 
  * config: disregard UTF-8 BOM when reading file.
